--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,11 +576,14 @@ header::after {
   content: "";
   background: url(../img/texto2.png) no-repeat left;
   display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
   top: -45%;
   right: 6%;
+  width: 550px;
+  height: 500px;
+  position: absolute;
+  top: -10%;
+  right: 65%;
+  z-index: 0;
 }
 @media screen and (max-width: 960px) {
   #projetos::after {
